
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int TOKEN_INFORMATION_CLASS ;
typedef int * LPVOID ;
typedef int HANDLE ;
typedef int DWORD ;


 scalar_t__ ERROR_INSUFFICIENT_BUFFER ;
 int GetLastError () ;
 int GetTokenInformation (int ,int ,int *,int ,int *) ;
 int LPTR ;
 scalar_t__ LocalAlloc (int ,int ) ;
 int printf (char*,int) ;

LPVOID GetInfoFromToken(HANDLE hToken, TOKEN_INFORMATION_CLASS type)
{
    DWORD dwLengthNeeded;
    LPVOID lpData = ((void*)0);


    if (!GetTokenInformation(hToken, type, ((void*)0), 0, &dwLengthNeeded) && GetLastError() != ERROR_INSUFFICIENT_BUFFER)
    {
        printf("\n[-] Failed to initialize GetTokenInformation %d", GetLastError());
        return ((void*)0);
    }

    lpData = (LPVOID)LocalAlloc(LPTR, dwLengthNeeded);
    GetTokenInformation(hToken, type, lpData, dwLengthNeeded, &dwLengthNeeded);

    return lpData;
}
