; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_45401.c_GetInfoFromToken.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_45401.c_GetInfoFromToken.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_INSUFFICIENT_BUFFER = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [49 x i8] c"\0A[-] Failed to initialize GetTokenInformation %d\00", align 1
@LPTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetInfoFromToken(i32 %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32* null, i32** %7, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @GetTokenInformation(i32 %8, i32 %9, i32* null, i32 0, i32* %6)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %20, label %12

12:                                               ; preds = %2
  %13 = call i32 (...) @GetLastError()
  %14 = sext i32 %13 to i64
  %15 = load i64, i64* @ERROR_INSUFFICIENT_BUFFER, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = call i32 (...) @GetLastError()
  %19 = call i32 @printf(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i32 %18)
  store i32* null, i32** %3, align 8
  br label %31

20:                                               ; preds = %12, %2
  %21 = load i32, i32* @LPTR, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i64 @LocalAlloc(i32 %21, i32 %22)
  %24 = inttoptr i64 %23 to i32*
  store i32* %24, i32** %7, align 8
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* %5, align 4
  %27 = load i32*, i32** %7, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @GetTokenInformation(i32 %25, i32 %26, i32* %27, i32 %28, i32* %6)
  %30 = load i32*, i32** %7, align 8
  store i32* %30, i32** %3, align 8
  br label %31

31:                                               ; preds = %20, %17
  %32 = load i32*, i32** %3, align 8
  ret i32* %32
}

declare dso_local i32 @GetTokenInformation(i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i64 @LocalAlloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
